syntax = "proto3";

import "protos/restaurant.proto";

option go_package = "github.com/booneng/nowa/protos";

package nowa;

message GetRestaurantRequest {
    int32 restaurant_id = 1;
}

message GetRestaurantResponse {
    Restaurant restaurant = 1;
}

service Nowa {
    rpc GetRestaurant(GetRestaurantRequest) returns (GetRestaurantResponse) {}
}